force-app/main/default/objects/Opportunity/fields/Campotexto__c.field-meta.xml
<CustomField>
    <fullName>Campotexto__c</fullName>
    <description>Adicionando descrição para esse campo</description>
    <label>Campotexto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>