force-app/main/default/objects/Opportunity/fields/Sabedoria_Opp__c.field-meta.xml
<CustomField>
    <fullName>Sabedoria_Opp__c</fullName>
    <description>Sabedoria vinda do Lead</description>
    <label>Sabedoria Opp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>