force-app/main/default/objects/Opportunity/fields/VIP_Profile__c.field-meta.xml
<CustomField>
    <fullName>VIP_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunities with Amount &gt; 50000</description>
    <label>VIP Profile</label>
    <type>Checkbox</type>
</CustomField>